--- a/assets/css/petaments.css
+++ b/assets/css/petaments.css
@@ -20,7 +20,7 @@
 }
 .petaments-para {
     font-family: 'Poppins', sans-serif;
-    font-weight: 500;
+    font-weight: 400;
     font-size: 16px;
     line-height: 26px;
 }
@@ -28,11 +28,13 @@
     font-size: 18px;
     font-family: 'Poppins', sans-serif;
     font-weight: 500;
+    line-height: 30px;
+    opacity: 0.8;
 }
 .petaments-para {
     line-height: 28px;
     font-family: 'Poppins', sans-serif;
-    font-weight: 500;
+    font-weight: 400;
     font-size: 14px;
 }
 
@@ -47,4 +49,16 @@
         justify-content: center;
         align-items: center;
     }
+}
+
+.project-content-part{
+    padding: 50px 0;
+}
+.project-content-part h2{
+    font-size: 32px;
+    font-weight: 500;
+    margin-bottom: 1rem;
+}
+.project-content-part .feature-row{
+    align-items: center;
 }
