--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -515,7 +515,7 @@ a:hover {
 /* footer section  */
 .footer-1 {
     background-color: black;
-    margin-top: 30px;
+    /* margin-top: 30px; */
 }
 
 .footer-info p {
