--- a/assets/css/answerbook-new.css
+++ b/assets/css/answerbook-new.css
@@ -79,7 +79,7 @@ body {
 
 .pd-about-title {
     font-family: 'Poppins', sans-serif;
-    font-weight: 500;
+    font-weight: 5 00;
 }
 
 .platform-title {
