--- a/assets/css/remedo.css
+++ b/assets/css/remedo.css
@@ -5,9 +5,12 @@
 }
 .remedo-font {
     font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    margin-bottom: 2rem !important;
 }
 .remedo-container {
-    margin-top: 30px;
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
 .Location-info p {
     font-family: 'Poppins', sans-serif;
@@ -27,15 +30,17 @@
     line-height: 28px;
 }
 .remedo-para {
-    font-weight: 500;
+    font-weight: 400;
     line-height: 28px;
     font-family: 'Poppins', sans-serif;
+    font-size: 16px;
 }
 
 .remedo-icon {
     height:40px;
     width: 40px;
 }
+
 
 
 /* media queiry ---- */
