--- a/assets/css/work.css
+++ b/assets/css/work.css
@@ -189,3 +189,88 @@
         width: 100%;
     }
 }
+
+.work-section{
+    padding: 50px 0;
+}
+.card{
+    background-color: #fff;
+    border: 0;
+    box-shadow: 0px 10px 50px -11px rgb(0 0 0/8%);
+    border-radius: 0;
+    position: relative;
+}
+.card::after{
+    position: absolute;
+    content: "";
+    background-color: #000;
+    opacity: 0.3;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+}
+
+.hover-block{
+    padding: 10px;
+    font-family: 'Poppins', sans-serif;
+    color: #fff;
+    position: absolute;
+    bottom: -100%;
+    overflow: hidden;
+    background: linear-gradient(to left, #333231d9 -20%, #8f8278d4 100%);
+    /* background-color: red; */
+    height: 0%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    transition: height 0.5s;
+    opacity: 0;
+}
+.card:hover .hover-block{
+    display: flex;
+    bottom: 0;
+    height: 100%;
+    opacity: 1;
+}
+.hover-block .content-part{
+    z-index: 2;
+}
+.hover-block h2{
+    color: #fff;
+    font-size: 28px;
+    margin-bottom: 10px;
+}
+.hover-block p{
+    color: #fff;
+    font-size: 16px;
+}
+.technlogy-name{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    grid-gap: 20px;
+    margin-top: 20px;
+}
+.technlogy-name p{
+    margin-bottom: 0;
+    font-size: 14px;
+    color: #fff;
+    opacity: 0.8;
+    margin-top: 10px;
+    font-weight: 400;
+}
+.inverted{
+    filter: invert(1);
+}
+.plate-form{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    grid-gap: 20px;
+    margin-bottom: 30px;
+}
+.plate-form h6{
+    font-size: 18px;
+    margin-bottom: 0;
+}
