--- a/assets/css/work.css
+++ b/assets/css/work.css
@@ -200,45 +200,67 @@
     border-radius: 0;
     position: relative;
 }
-.card::after{
-    position: absolute;
-    content: "";
-    background-color: #000;
-    opacity: 0.3;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-}
 
+
+.project-name{
+    font-size: 32px;
+    font-family: 'Poppins', sans-serif;
+    color: #333231;
+    font-weight: 600;
+    text-transform: capitalize;
+    opacity: 0.8;
+    padding-left: 10px;
+    background: linear-gradient(to right, #333231 0%, #8f8278 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    padding: 0 20px 20px;
+    text-align: left;
+    margin-top: -30px;
+}
+.card:hover .project-name{
+   opacity: 0;
+}
 .hover-block{
-    padding: 10px;
     font-family: 'Poppins', sans-serif;
     color: #fff;
     position: absolute;
-    bottom: -100%;
     overflow: hidden;
-    background: linear-gradient(to left, #333231d9 -20%, #8f8278d4 100%);
-    /* background-color: red; */
-    height: 0%;
+    top: 0;
+    background: linear-gradient(to left, #333231 -20%, #8f8278 100%);
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    transition: height 0.5s;
-    opacity: 0;
+    transition: display 0.5s;
+    display: none;
 }
+/* .hover-block::after{
+    position: absolute;
+    content: "";
+    background: red;
+    width: 100%;
+    height: 0%;
+    
+    transform: translateY(90%);
+    transition: transform 0.5s;
+}
+.card:hover .hover-block::after{
+    height: 100%;
+    transform: translateY(0%);
+} */
+
 .card:hover .hover-block{
     display: flex;
-    bottom: 0;
     height: 100%;
     opacity: 1;
 }
 .hover-block .content-part{
     z-index: 2;
+    padding: 10px;
 }
 .hover-block h2{
     color: #fff;
-    font-size: 28px;
+    font-size: 32px;
     margin-bottom: 10px;
 }
 .hover-block p{
@@ -247,7 +269,7 @@
 }
 .technlogy-name{
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     grid-gap: 20px;
     margin-top: 20px;
@@ -255,22 +277,125 @@
 .technlogy-name p{
     margin-bottom: 0;
     font-size: 14px;
-    color: #fff;
+    /* color: #fff; */
     opacity: 0.8;
     margin-top: 10px;
     font-weight: 400;
 }
 .inverted{
-    filter: invert(1);
+    /* filter: invert(1); */
+    height: 25px;
 }
 .plate-form{
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     grid-gap: 20px;
     margin-bottom: 30px;
 }
 .plate-form h6{
-    font-size: 18px;
+    font-size: 17px;
     margin-bottom: 0;
+    font-weight: 600;
+    line-height: 1.2;
 }
+
+
+
+
+  
+  
+  article.card {
+    /* position: absolute;
+    left: 50%;
+    top: 50%;
+    left: 50%; */
+    /* width: 350px;
+    height: 350px; */
+    /* transform: translate(-50%, -50%) translateZ(0); */
+    border-radius: 3px;
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
+    overflow: hidden;
+    padding-bottom: 60px;
+  }
+  article.card .thumb {
+    width: auto;
+    height: 400px;
+    background: url("../../assets/projects/project1.png") no-repeat center;
+    background-size: cover;
+    border-radius: 3px;
+  }
+  article.card .infos {
+    width: auto;
+    height: 80px;
+    /* height: 100%; */
+    /* max-height: 100%; */
+    position: relative;
+    padding: 14px 24px;
+    background: #fff;
+    transition: 0.4s 0.15s cubic-bezier(0.17, 0.67, 0.5, 1.03);
+    position: absolute;
+    bottom: 0;
+    /* background-color: red; */
+  }
+  article.card .infos .title {
+    position: relative;
+    margin: 10px 0;
+    color: #152536;
+    font-family: 'Poppins', sans-serif;
+    font-size: 1rem;
+    font-size: 28px;
+    text-align: left;
+    font-weight: 500;
+    margin-bottom: 0;
+  }
+  article.card .infos .date, article.card .infos .seats {
+    margin-bottom: 10px;
+    text-transform: uppercase;
+    font-size: 0.85rem;
+    color: rgba(21, 37, 54, 0.7);
+    font-family: 'Poppins', sans-serif;
+  }
+  article.card .infos .seats {
+    display: inline-block;
+    margin-bottom: 24px;
+    padding-bottom: 24px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+    opacity: 0;
+    transition: 0.5s 0.25s cubic-bezier(0.17, 0.67, 0.5, 1.03);
+  }
+  article.card .infos .txt {
+    font-family: 'Poppins', sans-serif;
+    line-height: 1.8;
+    font-size: 0.95rem;
+    color: rgba(21, 37, 54, 0.7);
+    opacity: 0;
+    transition: 0.5s 0.25s cubic-bezier(0.17, 0.67, 0.5, 1.03);
+    padding-top: 1rem;
+    text-align: left;
+  }
+  article.card .infos .details {
+    position: absolute;
+    left: 0;
+    /* right: 0; */
+    bottom: 0;
+    margin: 10px 0;
+    padding: 20px 24px;
+    letter-spacing: 1px;
+    color: #4e958b;
+    font-family: 'Poppins', sans-serif;
+    font-size: 16px;
+    text-transform: uppercase;
+    cursor: pointer;
+    opacity: 0;
+    transition: 0.5s 0.25s cubic-bezier(0.17, 0.67, 0.5, 1.03);
+    text-decoration: underline;
+  }
+  article.card:hover .infos {
+    /* transform: translateY(-320px); */
+    /* top: 0; */
+    height: 100%;
+  }
+  article.card:hover .infos .seats, article.card:hover .infos .txt, article.card:hover .infos .details {
+    opacity: 1;
+  }
