--- a/assets/css/work.css
+++ b/assets/css/work.css
@@ -273,6 +273,7 @@
     align-items: center;
     grid-gap: 20px;
     margin-top: 20px;
+    flex-wrap: wrap;
 }
 .technlogy-name p{
     margin-bottom: 0;
@@ -318,13 +319,61 @@
     overflow: hidden;
     padding-bottom: 60px;
   }
+  .project-start{
+    margin-bottom: 28px;
+  }
+  article .icon img{
+    height: 40px;
+  }
   article.card .thumb {
     width: auto;
-    height: 400px;
-    background: url("../../assets/projects/project1.png") no-repeat center;
-    background-size: cover;
+    height: 420px;
     border-radius: 3px;
   }
+  article.card .thumb.eccocar{
+    background: url("../../assets/projects/eccocar.png") no-repeat center;
+    background-size: cover;
+  }
+  article.card .thumb.sonetel{
+    background: url('../../assets/projects/sonetel.png') no-repeat center;
+    background-size: cover;
+  }
+  article.card .thumb.remedo{
+    background: url('../../assets/projects/remedo.png') no-repeat center;
+    background-size: cover;
+  }
+  article.card .thumb.answerbook{
+    background: url('../../assets/projects/Answerbook.png') no-repeat center;
+    background-size: cover;
+  }
+  article.card .thumb.bluebird{
+    background: url('../../assets/projects/bluebird.png') no-repeat center;
+    background-size: cover;
+  }
+  article.card .thumb.bryllance{
+    background: url('../../assets/projects/Bryllance.png') no-repeat center;
+    background-size: cover;
+  }
+  article.card .thumb.compose{
+    background: url('../../assets/projects/Compose.png') no-repeat center;
+    background-size: cover;
+  }
+  article.card .thumb.noobStorm{
+    background: url('../../assets/projects/Noobstorm.png') no-repeat center;
+    background-size: cover;
+  }
+  article.card .thumb.petaments{
+    background: url('../../assets/projects/Petaments.png') no-repeat center;
+    background-size: cover;
+ }
+ article.card .thumb.pipeline{
+    background: url('../../assets/projects/Pipeline.png') no-repeat center;
+    background-size: cover;
+ }
+article.card .thumb.shopout{
+    background: url('../../assets/projects/Shopout.png') no-repeat center;
+    background-size: cover;
+}
   article.card .infos {
     width: auto;
     height: 80px;
