--- a/assets/css/common-project.css
+++ b/assets/css/common-project.css
@@ -30,6 +30,13 @@
 .hero-section.petaments-project-page{
     background-image: url('../../assets/projects/petaments/hero-imh');
 }
+.hero-section.sonetel-project-page{
+    background-image: url('../../assets/projects/sonetel/Sonetel 1.png');
+    background-position-y: 148%;
+}
+.hero-section.pipeline-project-page{
+  background-image: url('../../assets/projects/pipeline/hero-pipeline');
+}
 
 .hero-section::before{
     content: "";
@@ -48,6 +55,9 @@
     opacity: 0.7;
 }
 .hero-section.remedo-project-page::before{
+    opacity: 0.7;
+}
+.hero-section.sonetel-project-page::before{
     opacity: 0.7;
 }
 .project-name{
@@ -147,3 +157,339 @@
     left: -18px;
     top: 11px;
 }
+.inner-right-content{
+    text-align: left;
+}
+.inner-right-content h6{
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 16px;
+}
+.inner-right-content p{
+    margin-bottom: 4px;
+    font-weight: 400;
+    font-size: 15px;
+}
+
+
+
+
+
+body {
+    margin: 0;
+    background: #EEE;
+    user-select: none;
+    font-family: sans-serif;
+  }
+
+  #slider {
+    position: relative;
+    width: 60%;
+    height: 15vw;
+    margin: 50px auto 100px;
+    font-family: 'Helvetica Neue', sans-serif;
+    perspective: 1400px;
+    transform-style: preserve-3d;
+  }
+  #slider-desktop{
+    position: relative;
+    width: 80%;
+    height: 20vw;
+    margin: 50px auto 100px;
+    font-family: 'Helvetica Neue', sans-serif;
+    perspective: 1400px;
+    transform-style: preserve-3d;
+  }
+  #slider2 {
+    position: relative;
+    width: 15%;
+    height: 500px;
+    perspective: auto;
+    Perspective: 1400px;
+    margin: 50px auto 100px;
+    font-family: 'Helvetica Neue', sans-serif;
+    transform-style: preserve-3d;
+  }
+  #slider.slider-remedo{
+    width: 15%;
+    height: 500px;
+    perspective: auto;
+  }
+  #slider.slider-sonetel{
+    margin: 100px auto 10px;
+  }
+
+
+  #slider label,
+  #slider label img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    color: white;
+    font-size: 70px;
+    font-weight: bold;
+    border-radius: 3px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: transform 400ms ease;
+  }
+  #slider-desktop label, #slider-desktop label img{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    color: white;
+    font-size: 70px;
+    font-weight: bold;
+    border-radius: 3px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: transform 400ms ease;
+  }
+  #slider.slider-sonetel label, #slider.slider-sonetel label img{
+    width: 100%;
+    height: auto;
+  }
+  #slider.slider-remedo label, #slider.slider-remedo label img {
+    width: 240px;
+    height: 500px;
+  }
+  #slider2 label,
+  #slider2 label img {
+    position: absolute;
+    width: 240px;
+    height: 500px;
+    left: 0;
+    top: 0;
+    color: white;
+    font-size: 70px;
+    font-weight: bold;
+    border-radius: 3px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: transform 400ms ease;
+  }
+
+  /* Slider Functionality */
+  /* Active Slide */
+  #s1:checked~#slide1,
+  #s2:checked~#slide2,
+  #s3:checked~#slide3,
+  #s4:checked~#slide4,
+  #s5:checked~#slide5 {
+    box-shadow: 0 13px 26px rgba(0, 0, 0, 0.3), 0 12px 6px rgba(0, 0, 0, 0.2);
+    transform: translate3d(0%, 0, 0px);
+  }
+
+  /* Next Slide */
+  #s1:checked~#slide2,
+  #s2:checked~#slide3,
+  #s3:checked~#slide4,
+  #s4:checked~#slide5,
+  #s5:checked~#slide1 {
+    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.3), 0 2px 2px rgba(0, 0, 0, 0.2);
+    transform: translate3d(20%, 0, -100px);
+  }
+
+  /* Next to Next Slide */
+  #s1:checked~#slide3,
+  #s2:checked~#slide4,
+  #s3:checked~#slide5,
+  #s4:checked~#slide1,
+  #s5:checked~#slide2 {
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.4);
+    transform: translate3d(40%, 0, -250px);
+  }
+
+  /* Previous to Previous Slide */
+  #s1:checked~#slide4,
+  #s2:checked~#slide5,
+  #s3:checked~#slide1,
+  #s4:checked~#slide2,
+  #s5:checked~#slide3 {
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.4);
+    transform: translate3d(-40%, 0, -250px);
+  }
+
+  /* Previous Slide */
+  #s1:checked~#slide5,
+  #s2:checked~#slide1,
+  #s3:checked~#slide2,
+  #s4:checked~#slide3,
+  #s5:checked~#slide4 {
+    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.3), 0 2px 2px rgba(0, 0, 0, 0.2);
+    transform: translate3d(-20%, 0, -100px);
+  }
+
+  /*desktop-slider */
+
+  #s1-desktop:checked~#slide1-desktop,
+  #s2-desktop:checked~#slide2-desktop,
+  #s3-desktop:checked~#slide3-desktop,
+  #s4-desktop:checked~#slide4-desktop,
+  #s5-desktop:checked~#slide5-desktop {
+    box-shadow: 0 13px 26px rgba(0, 0, 0, 0.3), 0 12px 6px rgba(0, 0, 0, 0.2);
+    transform: translate3d(0%, 0, 0px);
+  }
+
+  /* Next Slide */
+  #s1-desktop:checked~#slide2-desktop,
+  #s2-desktop:checked~#slide3-desktop,
+  #s3-desktop:checked~#slide4-desktop,
+  #s4-desktop:checked~#slide5-desktop,
+  #s5-desktop:checked~#slide1-desktop {
+    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.3), 0 2px 2px rgba(0, 0, 0, 0.2);
+    transform: translate3d(20%, 0, -100px);
+  }
+
+  /* Next to Next Slide */
+  #s1-desktop:checked~#slide3-desktop,
+  #s2-desktop:checked~#slide4-desktop,
+  #s3-desktop:checked~#slide5-desktop,
+  #s4-desktop:checked~#slide1-desktop,
+  #s5-desktop:checked~#slide2-desktop {
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.4);
+    transform: translate3d(40%, 0, -250px);
+  }
+
+  /* Previous to Previous Slide */
+  #s1-desktop:checked~#slide4-desktop,
+  #s2-desktop:checked~#slide5-desktop,
+  #s3-desktop:checked~#slide1-desktop,
+  #s4-desktop:checked~#slide2-desktop,
+  #s5-desktop:checked~#slide3-desktop {
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.4);
+    transform: translate3d(-40%, 0, -250px);
+  }
+
+  /* Previous Slide */
+  #s1-desktop:checked~#slide5-desktop,
+  #s2-desktop:checked~#slide1-desktop,
+  #s3-desktop:checked~#slide2-desktop,
+  #s4-desktop:checked~#slide3-desktop,
+  #s5-desktop:checked~#slide4-desktop {
+    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.3), 0 2px 2px rgba(0, 0, 0, 0.2);
+    transform: translate3d(-20%, 0, -100px);
+  }
+
+
+
+  /* Slider Functionality */
+  /* Active Slide */
+
+
+  /* REMEDO-SLIDER-PART */
+  #slider.slider-remedo #s1:checked~#slide1,
+  #slider.slider-remedo #s2:checked~#slide2,
+  #slider.slider-remedo #s3:checked~#slide3,
+  #slider.slider-remedo #s4:checked~#slide4,
+  #slider.slider-remedo #s5:checked~#slide5 {
+    box-shadow: none;
+    transform: translate3d(0%, 0, 0px);
+  }
+
+  /* Next Slide */
+  #slider.slider-remedo #s1:checked~#slide2,
+  #slider.slider-remedo #s2:checked~#slide3,
+  #slider.slider-remedo #s3:checked~#slide4,
+  #slider.slider-remedo #s4:checked~#slide5,
+  #slider.slider-remedo #s5:checked~#slide1 {
+    box-shadow: none;
+    transform: translate3d(75%, 0, -100px);
+  }
+
+  /* Next to Next Slide */
+  #slider.slider-remedo #s1:checked~#slide3,
+  #slider.slider-remedo #s2:checked~#slide4,
+  #slider.slider-remedo #s3:checked~#slide5,
+  #slider.slider-remedo #s4:checked~#slide1,
+  #slider.slider-remedo #s5:checked~#slide2 {
+    box-shadow: none;
+    transform: translate3d(160%, 0, -250px);
+  }
+
+  /* Previous to Previous Slide */
+  #slider.slider-remedo #s1:checked~#slide4,
+  #slider.slider-remedo #s2:checked~#slide5,
+  #slider.slider-remedo #s3:checked~#slide1,
+  #slider.slider-remedo #s4:checked~#slide2,
+  #slider.slider-remedo #s5:checked~#slide3 {
+    box-shadow: none;
+    transform: translate3d(-160%, 0, -250px);
+  }
+
+  /* Previous Slide */
+  #slider.slider-remedo #s1:checked~#slide5,
+  #slider.slider-remedo #s2:checked~#slide1,
+  #slider.slider-remedo #s3:checked~#slide2,
+  #slider.slider-remedo #s4:checked~#slide3,
+  #slider.slider-remedo #s5:checked~#slide4 {
+    box-shadow: none;
+    transform: translate3d(-75%, 0, -100px);
+  }
+
+  /* REMEDO-SLIDER-PART */
+  #slider2.slider-remedo #s11:checked~#slide11,
+  #slider2.slider-remedo #s21:checked~#slide21,
+  #slider2.slider-remedo #s31:checked~#slide31,
+  #slider2.slider-remedo #s41:checked~#slide41,
+  #slider2.slider-remedo #s51:checked~#slide51 {
+    box-shadow: none;
+    transform: translate3d(0%, 0, 0px);
+  }
+
+  /* Next Slide */
+  #slider2.slider-remedo #s11:checked~#slide21,
+  #slider2.slider-remedo #s21:checked~#slide31,
+  #slider2.slider-remedo #s31:checked~#slide41,
+  #slider2.slider-remedo #s41:checked~#slide51,
+  #slider2.slider-remedo #s51:checked~#slide11 {
+    box-shadow: none;
+    transform: translate3d(75%, 0, -100px);
+  }
+
+  /* Next to Next Slide */
+  #slider2.slider-remedo #s11:checked~#slide31,
+  #slider2.slider-remedo #s21:checked~#slide41,
+  #slider2.slider-remedo #s31:checked~#slide51,
+  #slider2.slider-remedo #s41:checked~#slide11,
+  #slider2.slider-remedo #s51:checked~#slide21 {
+    box-shadow: none;
+    transform: translate3d(160%, 0, -250px);
+  }
+
+  /* Previous to Previous Slide */
+  #slider2.slider-remedo #s11:checked~#slide41,
+  #slider2.slider-remedo #s21:checked~#slide51,
+  #slider2.slider-remedo #s31:checked~#slide11,
+  #slider2.slider-remedo #s41:checked~#slide21,
+  #slider2.slider-remedo #s51:checked~#slide31 {
+    box-shadow: none;
+    transform: translate3d(-160%, 0, -250px);
+  }
+
+  /* Previous Slide */
+  #slider2.slider-remedo #s11:checked~#slide51,
+  #slider2.slider-remedo #s21:checked~#slide11,
+  #slider2.slider-remedo #s31:checked~#slide21,
+  #slider2.slider-remedo #s41:checked~#slide31,
+  #slider2.slider-remedo #s51:checked~#slide41 {
+    box-shadow: none;
+    transform: translate3d(-75%, 0, -100px);
+  }
+
+
+
+  input[type="radio"] {
+   
+    display: none;
+  }
