--- a/assets/css/pipeline.css
+++ b/assets/css/pipeline.css
@@ -1,7 +1,9 @@
 .pipeline-col {
     padding: 0;
 }
-
+.pipeline-container{
+    padding: 50px 0;
+}
 .Location-title {
     font-family: 'Poppins', sans-serif;
     font-weight: 400;
