--- a/assets/css/common-project.css
+++ b/assets/css/common-project.css
@@ -37,7 +37,9 @@
 .hero-section.pipeline-project-page{
   background-image: url('../../assets/projects/pipeline/hero-pipeline');
 }
-
+.hero-section.shopout-project-page{
+  background-image: url('../../assets/projects/shopout/Web-Shopout.png');
+}
 .hero-section::before{
     content: "";
     position: absolute;
@@ -59,6 +61,9 @@
 }
 .hero-section.sonetel-project-page::before{
     opacity: 0.7;
+}
+.hero-section.shopout-project-page::before{
+  opacity: 0.7;
 }
 .project-name{
     height: 100%;
@@ -195,6 +200,7 @@ body {
     position: relative;
     width: 80%;
     height: 20vw;
+    min-height: 500px;
     margin: 50px auto 100px;
     font-family: 'Helvetica Neue', sans-serif;
     perspective: 1400px;
@@ -492,4 +498,7 @@ body {
   input[type="radio"] {
    
     display: none;
+  }
+  .slider-section{
+    overflow: hidden;
   }
